fix typing bubbles on SessionConversation
for some reasons, they were sometimes not visible due to the message
list bottom padding

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -404,7 +404,7 @@
 
 .module-message__typing-container {
   height: 16px;
-
+  padding-bottom: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
